# ColorChooser

./: CMakeLists.txt
CMake/: Functions.cmake
resources/: win_icon.rc
src/: main.cpp
src/ui/: ColorChooser.cpp  ColorChooser.h  ColorChooser.ui  ColorEditor.cpp  ColorEditor.h  ColorEditor.ui  StyleFusionDark.h
